[package]
name = "Pendora"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
minacalc-rs = "0.2.2"
rosu-map = "0.2.1"
rosu-pp = "3.1.0"
rosu-v2 = "0.11.0"
thiserror = "2.0"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tracing-appender = "0.2.3"

