[package]
name = "pendora"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "pendora"
path = "src/main.rs"

[dependencies]
dotenvy = "0.15.7"
minacalc-rs = { version = "0.2.2", features = ["osu", "hashmap"] }
rosu-map = "0.2.1"
rosu-pp = "3.1.0"
rosu-v2 = "0.11.0"
thiserror = "2.0"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tracing-appender = "0.2.3"
anyhow = "1.0.100"
dto = { path = "../dto-lib" }
db = { path = "../database-lib" }
bigdecimal = { version = "0.4.8", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = "0.12.23"
brotli = "8.0.2"
md5 = "0.8.0"
ssrrr = "0.2.1"
